# San-Zshell

./: CMakeLists.txt  README.md
include/: banner.h  builtins.h  executor.h  prompt.h  repl.h
src/: banner.c
src/core/: main.c  prompt.c  repl.c
src/executor/: builtins.c  executor.c
